RESOLVED FIXED225780
[Modern Media Controls] REGRESSION(r268308) AirPlay briefly disappears and then reappears when hovering over controls
https://bugs.webkit.org/show_bug.cgi?id=225780
Summary [Modern Media Controls] REGRESSION(r268308) AirPlay briefly disappears and th...
Devin Rousso
Reported 2021-05-13 13:50:02 PDT
.
Attachments
Patch (5.49 KB, patch)
2021-05-13 14:08 PDT, Devin Rousso
no flags
Patch (4.98 KB, patch)
2021-05-13 14:35 PDT, Devin Rousso
no flags
Patch (5.81 KB, patch)
2021-05-13 14:57 PDT, Devin Rousso
no flags
Devin Rousso
Comment 1 2021-05-13 13:53:42 PDT
Radar WebKit Bug Importer
Comment 2 2021-05-13 13:53:51 PDT
Devin Rousso
Comment 3 2021-05-13 13:58:55 PDT
Devin Rousso
Comment 4 2021-05-13 14:08:00 PDT
Devin Rousso
Comment 5 2021-05-13 14:35:53 PDT
Created attachment 428562 [details] Patch disabling code that removes the `"webkitplaybacktargetavailabilitychanged"` in WebKit's builtin media controls could be a power regression
Devin Rousso
Comment 6 2021-05-13 14:37:02 PDT
Comment on attachment 428562 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=428562&action=review > Source/WebCore/platform/graphics/avfoundation/objc/AVRoutePickerViewTargetPicker.mm:184 > + if (m_ignoreNextMultipleRoutesDetectedDidChangeNotification) oops I forgot to set it back to `false` 😅
Devin Rousso
Comment 7 2021-05-13 14:57:31 PDT
EWS
Comment 8 2021-05-13 21:44:21 PDT
Committed r277481 (237716@main): <https://commits.webkit.org/237716@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 428564 [details].
Note You need to log in before you can comment on or make changes to this bug.